--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,25 +38,29 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
-   /*  width: 1248px; height: 485px; left: 96px; top: 64px; position: absolute; background: #1F242D */
+    z-index: 99;
 }
 
 .navbar {
     width: 100%;
     height: 63px;
+    margin: 0 96px 0 0;
     font-size: 1.6rem;
     color: var(--text-color);
-    /* "width: 1248px; height: 63px; left: 96px; top: 5px; position: absolute" */
 }
 .navlink {
     width: 376px; 
     height: 14px; 
-    left: 872px; 
+    left: 65%; 
     top: 19px; 
     position: absolute;
     display: flex;
 }
+.navbar a {
+    cursor: pointer;
+    font-weight: 500;
+  }
+
 .nav-item {
     color: var(--text-color);
     padding-right: 34px;
@@ -81,10 +85,41 @@ body{
     height: 30px; 
     position: absolute;
 }
-.name {
+.title {
     margin-top: 2px; 
     margin-left: 37px; 
     position: absolute; 
     font-size: 1.5rem;
 }
-
+.container {
+    margin: 0 96px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    height: calc(60vh + 23px);
+    z-index: 1000;
+  }
+.pic {
+    width: 300px;
+    height: 300px;
+}
+.background-image {
+    position: absolute;
+    top: calc(50% - 150px);
+    left: calc(50% - 150px);
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    box-shadow:
+      inset 0 0 50px #fff,      /* inner white */
+      inset 20px 0 80px #f0f,   /* inner left magenta short */
+      inset -20px 0 80px #0ff,  /* inner right cyan short */
+      inset 20px 0 300px #f0f,  /* inner left magenta broad */
+      inset -20px 0 300px #0ff, /* inner right cyan broad */
+      0 0 50px #fff,            /* outer white */
+      -10px 0 80px #f0f,        /* outer left magenta */
+      10px 0 80px #0ff;         /* outer right cyan */
+}
