--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,7 +93,7 @@ body{
 }
 .container {
     width: 100vw;
-    height: 485px;
+    height: 350px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -142,10 +142,36 @@ body{
     color: var(--text-color);
     font-size: 4rem;
 }
+.heading{
+    font-size: 1.5rem;
+    margin-top: 50%;
+}
+.box {
+    display: flex;
+    width: 50vw;
+    height: 300px;
+    padding: 18px 45px 17px 33px;
+    align-items: flex-start;
+    gap: 205px;
+    flex-shrink: 0;
+}
+.box-container {
+    width: 100%;
+    height: 250px;
+    flex-shrink: 0;
+}
+.box-stack {
+    width: 100%;
+    height: 199px;
+    flex-shrink: 0;
+}
+.stack-group {
+    display: flex;
+    flex-direction: column;
+    background: var(--color-bg);
+}
 
-
-
-
+/*TODO: Ajustar responsividade*/
 /* Tela menor que 600px*/
 @media only screen and (max-width: 600px) {
     .pic .background-image {
@@ -156,4 +182,37 @@ body{
     .pic {
         margin: auto;
     }
+    .greeting {
+        margin-top: 85vh;
+        font-size: 4rem;
+    }
+        .name {
+        font-size: 4rem;
+    }
+        .wrap { 
+        font-size: 3rem;
+    }
 }
+
+/*TODO: Ajustar responsividade*/
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .pic .background-image {
+        width: calc(100% - 150px);
+        height: calc(100% - 150px);
+    }
+
+    .pic {
+        margin: auto;
+    }
+    .greeting {
+        margin-top: 90vh;
+        font-size: 4rem;
+    }
+        .name {
+        font-size: 4rem;
+    }
+        .wrap { 
+        font-size: 3rem;
+    }
+}
+    
