--- a/src/css/style.css
+++ b/src/css/style.css
@@ -259,6 +259,88 @@ td {
 .color-4 { background-color: #216e39; }
 
 
+.stack-project {
+    width: 70vw;
+    height: auto;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.stack-project div {
+    width: calc(33.33% - 10px);
+    height: calc(33.33% - 10px);
+    background-color: #121212;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+
+.project-title{
+    margin: 65vh 0 6vh 0;
+    font-size: 2.5rem;
+}
+
+.list-project {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .project {
+    width: 33.33%;
+    height: 300px;
+    background-color: #121212;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 20px 20px 20px;
+    margin-bottom: 20px;
+  }
+.screen {
+    width: 228px;
+    height: 228px;
+    top: 0;
+    
+}
+.label {
+    height: 29px;
+    width: 232px;
+    
+}
+.label .ods-heading {
+    color: #fff;
+    font-size: 24px;
+    font-weight: 400;
+    height: 29px;
+    left: 0;
+    top: 7em;
+    letter-spacing: 0;
+    position: relative;
+    white-space: nowrap;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*TODO: Ajustar responsividade*/
 /* Tela menor que 600px*/
@@ -305,3 +387,5 @@ td {
     }
 }
     
+
+
