--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,70 +27,95 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
 }
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 2rem 9%;
-    background: var(--bg-color);
+nav {
     display: flex;
-    justify-content: space-between;
+    height: 80px;
+    width: 100%;
     align-items: center;
-    z-index: 99;
+    justify-content: space-between;
+    padding: 0 50px 0 100px;
+    flex-wrap: wrap;
+    
 }
-
-.navbar {
-    width: 100%;
-    height: 63px;
-    margin: 0 96px 0 0;
-    font-size: 1.6rem;
-    color: var(--text-color);
-}
-.nav-link {
-    width: 376px; 
-    height: 14px; 
-    left: 65%; 
-    top: 19px; 
-    position: absolute;
-    display: flex;
-}
-.navbar a {
-    cursor: pointer;
-    font-weight: 500;
-  }
-
-.nav-menu {
-    color: var(--text-color);
-    padding-right: 34px;
-    text-transform: uppercase;
-    font-size: 1.4rem;
-}
-
-.nav-menu:last-child {
-    padding-right: 0;
-}
-
-.logo {
-    width: 12vw;
-    height: 4.2vh;
-    font-size: 2.5rem;
-    color: var(--text-color);
+nav .logo{
+    color: #fff;
+    font-size: 1.5rem;
     font-weight: 600;
-    cursor: default;
 }
 .logo-image {
     width: 30px; 
     height: 30px; 
-    position: absolute;
-}
+    position: relative;
+} 
 .logo-title {
-    margin-top: 2px; 
-    margin-left: 37px; 
+    margin: 2px 0 0 4px;
     position: absolute; 
     font-size: 1.5rem;
+    color: #fff;
 }
+nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+nav ul li{
+    margin: 0 5px;
+}
+
+nav ul li a{
+    color: #f2f2f2;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 8px 10px;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    transition: all 0.3s ease;
+}
+nav ul li a.active,
+nav ul li a:hover{
+    background: #09caa8;
+}
+
+nav .menu-btn i{
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+@media (max-width: 920px) {
+    nav .menu-btn i{
+        display: block;
+    }
+    nav ul{
+        position: fixed;
+        top: 80px;
+        left: -100%;
+        background-color: #0095aa;
+        height: 100vh;
+        width: 100%;
+        text-align: center;
+        display: block;
+        transition: all 0.3s ease;
+    }
+    nav ul.open{
+        left: 0;
+    }
+    nav ul li{
+        width: 100%;
+        margin: 50px 0;
+    }
+    nav ul li a {
+        font-size: 23px;
+    }
+    nav ul li a.active,
+    nav ul li a:hover{
+        background: none;
+        color: #09caa8;
+    }   
+}
+
+
 .container {
     width: 100vw;
     height: calc(60vh + 23px);
