--- a/src/css/particles.css
+++ b/src/css/particles.css
@@ -18,7 +18,7 @@ canvas{
  } 
     /* ---- stats.js ---- */ 
 .count-particles{ 
-    background: #000022; 
+    background: #1f242d; 
     position: absolute; 
     top: 48px; 
     left: 0; 
