--- a/src/css/style.css
+++ b/src/css/style.css
@@ -353,6 +353,30 @@ td {
     font-size: 1.8em;
     color: var(--text-color);    
 }
+
+.btn-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.card-button {  
+    background:#009ba8;
+    border-radius:5px;
+    padding: 5px 40px;
+    margin: 20px 10px 0 10px;
+    cursor:pointer;
+    color: var(--text-primary);
+    font-size: 14px;
+    transition: all 0.3s;
+  }
+ .card-button:hover { 
+      background:#73c8fb; }
+
+
+
 section {
   display: flex;
   flex-direction: row;
