--- a/src/css/style.css
+++ b/src/css/style.css
@@ -178,7 +178,7 @@ nav .menu-btn i{
     display: flex;
     width: 1084px;
     height: 300px;
-    margin: 0 auto;
+    margin: -50px auto;
     align-items: center;
     justify-content: space-between;
     flex-shrink: 0;
