editing bio button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -353,6 +353,9 @@ td {
     font-size: 1.8em;
     color: var(--text-color);    
 }
+.btn-group {
+  margin: 0;
+}
 
 .btn-card {
     display: flex;
