--- a/src/css/style.css
+++ b/src/css/style.css
@@ -481,6 +481,12 @@ textarea {
 /*TODO: Ajustar responsividade*/
 /* Tela menor que 600px*/
 @media only screen and (max-width: 600px) {
+    .box{
+        display: flex;
+        flex-direction: column;
+    }
+    
+
     .profile-pic .background-image {
         width: calc(100% - 150px);
         height: calc(100% - 150px);
