--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,7 +51,6 @@ nav .logo{
 .logo-image {
     width: 30px; 
     height: 30px; 
-    position: relative;
 } 
 .logo-title {
     margin: 2px 0 0 4px;
@@ -89,39 +88,6 @@ nav .menu-btn i{
     cursor: pointer;
     display: none;
 }
-@media (max-width: 920px) {
-    nav .menu-btn i{
-        display: block;
-    }
-    nav ul{
-        position: fixed;
-        top: 20px;
-        left: -100%;
-        background-color: #71819d;
-        height: 28vh;
-        width: 20%;
-        text-align: center;
-        display: block;
-        transition: all 0.3s ease-out;
-        z-index: 999;
-    }
-    nav ul.open{
-        top: 40px;
-        left: 555px;
-    }
-    nav ul li{
-        width: 100%;
-        margin: 20px 0;
-    }
-    nav ul li a {
-        font-size: 15px;
-    }
-    nav ul li a.active,
-    nav ul li a:hover{
-        background: #09caa8;
-    }   
-}
-
 
 .container {
     width: 100vw;
@@ -541,36 +507,134 @@ textarea {
   }
 
 /*TODO: Ajustar responsividade*/
-/* Tela menor que 600px*/
-@media only screen and (max-width: 600px) {
-    .box{
-        display: flex;
-        flex-direction: column;
+/* Tela menor que 480px - dispositivos móveis*/
+@media only screen and (max-width: 480px) {
+    .container {
+        width: 90vw;
+        height: calc(50vh + 23px);        
+      }
+    .profile-pic .background-image {
+        width: calc(75% - 100px);
+        height: calc(75% - 100px);
+    }
+    .profile-pic {
+        margin-top: auto;
+    }
+    .intro-greeting {
+        margin-top: 85vh;
+        margin-right: 10%;
+    }
+    .intro-name {
+        margin: auto;
+    }
+    .typewrite-wrap { 
+        font-size: 2rem;
+        margin: auto;
+    }
+    .logo-image{
+        margin-left: -250%;
+    }
+    .box-container {
+        width: 100%; 
+        margin: 0; 
     }
     
-
-    .profile-pic .background-image {
-        width: calc(100% - 150px);
-        height: calc(100% - 150px);
+    .box-container:last-child {
+        margin-top: 0; 
+    }
+    
+    .about-title {
+        margin-left: 5%;
+    }
+    .about-text {
+        width: auto; 
+        padding: 10px 30px; 
+    }
+    .stack-title {
+        margin-top: -30%;
+        margin-left: 5%;
+    }
+    .stack-icons {
+        flex-direction: row; 
+        flex-wrap: wrap; 
+        justify-content: space-between; 
+        margin: 0;
+        padding: 0 20px 0 20px;
+      }
+    
+      .stack-icons div {
+        width: calc(33.33% - 10px);
+      }
+      .stack-icons svg {
+        width: 50px;
+        height: 55px;    
+    }
+    
+    .github-container {
+        overflow-x: scroll; 
+        max-height: 300px; 
+        margin-left: -5%;
+    }
+    .table-title {
+        margin-left: -27%;
+    }
+    /* Estilização das barras de rolagem */
+    .github-container::-webkit-scrollbar {
+        width: 8px; 
     }
 
+    .github-container::-webkit-scrollbar-thumb {
+        background-color: #888; 
+        border-radius: 8px; 
+    }
+
+    .github-container::-webkit-scrollbar-thumb:hover {
+        background-color: #555; 
+    }
+    table {
+        padding-right: 30px;
+    }
+  
+}
+
+
+
+/* Tela menor que 768px*/
+@media only screen and (min-width: 485px and max-width: 768px) {
+    .logo-image{
+        margin-left: -250%;
+    }
+    .profile-pic .background-image {
+        width: calc(80% - 150px);
+        height: calc(80% - 150px);
+    }
     .profile-pic {
-        margin: auto;
+        margin-top: auto;
     }
     .intro-greeting {
         margin-top: 85vh;
         font-size: 4rem;
     }
-        .intro-name {
+    .intro-name {
         font-size: 4rem;
+        
     }
-        .typewrite-wrap { 
+    .typewrite-wrap { 
         font-size: 3rem;
+        margin-right: 1rem;
+    }
+    .box{
+        display: flex;
+        flex-direction: column;
     }
 }
 
 /*TODO: Ajustar responsividade*/
 @media only screen and (min-width: 768px) and (max-width: 959px) {
+    .logo-image{
+        margin-left: -250%;
+    }
+
     .profile-pic .background-image {
         width: calc(100% - 150px);
         height: calc(100% - 150px);
@@ -591,5 +655,50 @@ textarea {
     }
 }
     
+@media (max-width: 920px) {
+   
+    .logo-image {
+        width: 30px; 
+        height: 30px; 
+        position: relative;
+    } 
+    .logo-title {
+        margin: 2px 0 0 4px;
+        position: absolute; 
+        font-size: 1.5rem;
+        color: #fff;
+    }
 
+
+    nav .menu-btn i{
+        display: block;
+    }
+    nav ul{
+        position: fixed;
+        top: 20px;
+        left: -100%;
+        background-color: #71819d;
+        height: 28vh;
+        width: 20%;
+        text-align: center;
+        display: block;
+        transition: all 0.3s ease-out;
+        z-index: 999;
+    }
+    nav ul.open{
+        top: 40px;
+        left: 555px;
+    }
+    nav ul li{
+        width: 100%;
+        margin: 20px 0;
+    }
+    nav ul li a {
+        font-size: 15px;
+    }
+    nav ul li a.active,
+    nav ul li a:hover{
+        background: #09caa8;
+    }   
+}
   
