480px screen responsive

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -547,7 +547,11 @@ td {
     }
     
     .box-container:last-child {
-        margin-top: 0; 
+        margin-top: 180vh; 
+        margin-left: -90vw;
+        padding: 20px;
+        align-items: center;
+        justify-content: center;
     }
     
     .about-title {
@@ -557,24 +561,27 @@ td {
         width: auto; 
         padding: 10px 30px; 
     }
-    .stack-title {
-        margin-top: -30%;
-        margin-left: 5%;
-    }
+   .stack-title {
+    margin-top: 20%;
+   }
     .stack-icons {
-        flex-direction: row; 
-        flex-wrap: wrap; 
-        justify-content: space-between; 
-        margin: 0;
-        padding: 0 20px 0 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    
+        
       }
     
       .stack-icons div {
         width: calc(33.33% - 10px);
+        display: flex;
+        flex-direction: column;
       }
       .stack-icons svg {
-        width: 50px;
-        height: 55px;    
+        width: 30px;
+        height: 35px;    
     }
     
     .github-container {
