--- a/src/css/style.css
+++ b/src/css/style.css
@@ -206,7 +206,7 @@ nav .menu-btn i{
     padding: 0 0 20px 0;
 }
 .github-container {
-    width: 100vw;
+    width: 100%;
     margin-top: 8rem;
     position: absolute;
     display: block;
@@ -221,30 +221,12 @@ nav .menu-btn i{
 
 .table-title{
     font-size: 2rem;
+    padding-bottom: 1em;
 }
-
-table {
-    border-collapse: separate;
-    border-spacing: 2px;
-    width: 72%;
-    margin-top: 2rem;
-    margin-left: 13vw;
-    color: #fff;
+.github-table {
+    width: 60%;
     
 }
-
-td {
-    height: 10px;
-    border: 1px solid #9ca6b8;
-    border-radius: 2px;
-    padding: 5px;
-}
-
-.color-0 { background-color: #323946; }
-.color-1 { background-color: #9be9a8; }
-.color-2 { background-color: #40c463; }
-.color-3 { background-color: #30a14e; }
-.color-4 { background-color: #216e39; }
 
 .card-group {
     margin-top: 50vh;
@@ -255,7 +237,7 @@ td {
     font-size: 2.5rem;
     font-weight: bold;
     text-align: center;
-    margin-top: -100px;
+    margin-top: -50px;
     margin-bottom: 50px;
     padding-top: 20px;
 }
