--- a/src/css/style.css
+++ b/src/css/style.css
@@ -507,10 +507,10 @@ nav .menu-btn i{
     }
     .intro-greeting {
         margin-top: 85vh;
-        margin-right: 10%;
+        margin-right: 8%;
     }
     .intro-name {
-        margin: auto;
+        margin-left: 2%;
     }
     .typewrite-wrap { 
         font-size: 2rem;
@@ -585,7 +585,6 @@ nav .menu-btn i{
     }
     .github-table {
         width: 50%;
-        margin-left: 20px;
         
     }
 
