--- a/src/css/style.css
+++ b/src/css/style.css
@@ -507,10 +507,10 @@ nav .menu-btn i{
     }
     .intro-greeting {
         margin-top: 85vh;
-        margin-right: 8%;
+        margin-right: 10%;
     }
     .intro-name {
-        margin-left: 2%;
+        margin: auto;
     }
     .typewrite-wrap { 
         font-size: 2rem;
@@ -572,7 +572,7 @@ nav .menu-btn i{
     }
     /* Estilização das barras de rolagem */
     .github-container::-webkit-scrollbar {
-        width: 10px; 
+        width: 8px; 
     }
 
     .github-container::-webkit-scrollbar-thumb {
@@ -583,11 +583,7 @@ nav .menu-btn i{
     .github-container::-webkit-scrollbar-thumb:hover {
         background-color: #555; 
     }
-    .github-table {
-        width: 50%;
-        
-    }
-
+    
     .card-group-title {
         margin-bottom: 10px;  
         padding: 0 20px; 
