--- a/src/css/style.css
+++ b/src/css/style.css
@@ -583,7 +583,10 @@ nav .menu-btn i{
     .github-container::-webkit-scrollbar-thumb:hover {
         background-color: #555; 
     }
-    
+    .github-table {
+        width: auto;
+    }
+
     .card-group-title {
         margin-bottom: 10px;  
         padding: 0 20px; 
