--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,7 +221,6 @@ nav .menu-btn i{
 }
 .github-table {
     width: 60%;
-    
 }
 
 .card-group {
@@ -570,6 +569,9 @@ nav .menu-btn i{
     .table-title {
         margin-left: -27%;
     }
+    .github-table {
+        width: 100%;
+    }
     /* Estilização das barras de rolagem */
     .github-container::-webkit-scrollbar {
         width: 8px; 
@@ -583,6 +585,7 @@ nav .menu-btn i{
     .github-container::-webkit-scrollbar-thumb:hover {
         background-color: #555; 
     }
+
 
     .card-group-title {
         margin-bottom: 10px;  
@@ -630,7 +633,7 @@ nav .menu-btn i{
 }
 
 /*TODO: Ajustar responsividade*/
-@media only screen and (min-width: 768px) and (max-width: 959px) {
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
     .logo-image{
         margin-left: -250%;
     }
@@ -655,13 +658,6 @@ nav .menu-btn i{
     }
 }
     
-@media (max-width: 920px) {
-   
-    .logo-image {
-        width: 30px; 
-        height: 30px; 
-        position: relative;
-    } 
     .logo-title {
         margin: 2px 0 0 4px;
         position: absolute; 
@@ -700,5 +696,3 @@ nav .menu-btn i{
     nav ul li a:hover{
         background: #09caa8;
     }   
-}
-  
