adjusting stack margin-top

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -539,7 +539,7 @@ nav .menu-btn i{
         padding: 10px 30px; 
     }
    .stack-title {
-    margin-top: 20%;
+    margin-top: 0;
    }
     .stack-icons {
         width: 100%;
