--- a/src/css/style.css
+++ b/src/css/style.css
@@ -536,9 +536,10 @@ nav .menu-btn i{
     .table-title {
         margin-left: -27%;
     }
+
     /* Estilização das barras de rolagem */
     .github-container::-webkit-scrollbar {
-        width: 10px; 
+        width: 8px; 
     }
     .github-container::-webkit-scrollbar-thumb {
         background-color: #888; 
@@ -546,6 +547,10 @@ nav .menu-btn i{
     }
     .github-container::-webkit-scrollbar-thumb:hover {
         background-color: #555; 
+    }
+    .github-table {
+        width: auto;
+        margin-left: 8%;
     }
 
     .card-group-title {
@@ -591,7 +596,7 @@ nav .menu-btn i{
     }
 }
 /*TODO: Ajustar responsividade*/
-@media only screen and (min-width: 768px) and (max-width: 959px) {
+@media only screen and (min-width: 769px) and (max-width: 959px) {
     .logo-image{
         margin-left: -250%;
     }
