--- a/src/css/style.css
+++ b/src/css/style.css
@@ -618,6 +618,7 @@ nav .menu-btn i{
         
     }
 }
+
 /* Media query para telas de 481px a 600px */
 @media (min-width: 481px) and (max-width: 600px) {
     .container {
@@ -730,16 +731,138 @@ nav .menu-btn i{
 }
 /*TODO: Ajustar responsividade*/
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .container {
+        width: 90vw;
+        height: calc(50vh + 23px);        
+      }
+    .profile-pic .background-image {
+        width: calc(100% - 100px);
+        height: calc(100% - 100px);
+    }
+    .profile-pic {
+        margin-top: auto;
+    }
+    .intro-greeting {
+        margin-top: 70vh;
+        padding: 2em 2.5em 0 2.5em;
+    }
+    .intro-name {
+        margin: auto;
+
+    }
+    .typewrite-wrap { 
+        margin: auto;
+    }
+    .logo-image{
+        margin-left: -250%;
+    }
+    .box-container {
+        width: 100%; 
+        margin: 0; 
+    }
+    
+    .box-container:last-child {
+        margin-top: 180vh; 
+        margin-left: -90vw;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .about-title {
+        margin-top: -120%;
+        margin-left: 5%;
+    }
+    .about-text {
+        width: auto; 
+        padding: 10px 30px; 
+    }
+    #btn-bio{
+        margin-top: -20vh;
+        
+    }
+    .stack-title {
+        margin-top: -90vh;
+        padding: 30px 0px;
+        
+    }
+    .stack-icons {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        padding: 1px;
+        margin-left: -10px;
+      }
+      .stack-icons div {
+        width: calc(33.33% - 10px);
+        display: flex;
+        flex-direction: column;
+      }
+      .stack-icons svg {
+        width: 60px;
+        height: 60px;    
+    }
+    
+    .github-container {
+        overflow-x: scroll; 
+        max-height: 600px; 
+        margin-left: -5%;
+        margin-top: -10vh;
+    }
+    .table-title {
+        margin-top: 20vh;
+        margin-left: -27%;        
+    }
+
+    /* Estilização das barras de rolagem */
+    .github-container::-webkit-scrollbar {
+        width: 8px; 
+    }
+    .github-container::-webkit-scrollbar-thumb {
+        background-color: #888; 
+        border-radius: 8px; 
+    }
+    .github-container::-webkit-scrollbar-thumb:hover {
+        background-color: #555; 
+    }
+    .github-table {
+        width: 100%;
+        margin-left: 8%;
+    }
+
+    .card-group {
+        margin-top: 55vh;
+    }
+    .card {
+        width: calc(50% - 20px);
+        
+    }
+    .card-title {
+        margin-top: 2rem;
+    }
+    .card-img-top {
+        width: 250px;
+        height: 150px;
+    }
+    .card-button {
+        font-size: 1.5em;
+        margin: 1.5em;
+    }
+ 
+}
+@media (max-width: 920px) {
+   
     .logo-image {
-        padding-left: 10px; 
-        width: 40px; 
-        height: 40px; 
+        width: 30px; 
+        height: 30px; 
         position: relative;
     } 
     .logo-title {
-        margin: 2px 0 0 150pxpx;
+        margin: 2px 0 0 4px;
         position: absolute; 
-        font-size: 3rem;
+        font-size: 1.5rem;
         color: #fff;
     }
     nav .menu-btn i{
@@ -772,158 +895,6 @@ nav .menu-btn i{
     nav ul li a:hover{
         background: #09caa8;
     }   
-    .container {
-        width: 90vw;
-        height: calc(50vh + 23px);        
-      }
-    .profile-pic .background-image {
-        width: calc(100% - 100px);
-        height: calc(100% - 100px);
-    }
-    .profile-pic {
-        margin-top: auto;
-    }
-    .intro-greeting {
-        margin-top: 40vh;
-        font-size: 8rem;
-        padding: 2em 1em 0 1em;
-    }
-    .intro-name {
-        margin: auto;
-        font-size: 8rem;
-    }
-    .typewrite-wrap { 
-        font-size: 5rem;
-        margin: auto;
-    }
-    .logo-image{
-        margin-left: -250%;
-    }
-    .box-container {
-        width: 100%; 
-        margin: 0; 
-    }
-    
-    .box-container:last-child {
-        margin-top: 180vh; 
-        margin-left: -90vw;
-        padding: 10px;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .about-title {
-        margin-top: -140%;
-        margin-left: 5%;
-        font-size: 3em;
-    }
-    .about-text {
-        width: auto; 
-        padding: 10px 30px; 
-        font-size: 3rem;
-
-    }
-    #btn-bio{
-        margin-top: 5vh;
-        font-size: 3rem;
-    }
-    .stack-title {
-        margin-top: -80vh;
-        padding: 30px 0px;
-        font-size: 3em;
-    }
-    .stack-icons {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        padding: 1px;
-        margin-left: -10px;
-      }
-      .stack-icons div {
-        width: calc(33.33% - 10px);
-        display: flex;
-        flex-direction: column;
-      }
-      .stack-icons svg {
-        width: 80px;
-        height: 80px;    
-    }
-    
-    .github-container {
-        overflow-x: scroll; 
-        max-height: 600px; 
-        margin-left: -5%;
-        margin-top: -10vh;
-    }
-    .table-title {
-        margin-left: -27%;
-        font-size: 4rem;
-    }
-
-    /* Estilização das barras de rolagem */
-    .github-container::-webkit-scrollbar {
-        width: 8px; 
-    }
-    .github-container::-webkit-scrollbar-thumb {
-        background-color: #888; 
-        border-radius: 8px; 
-    }
-    .github-container::-webkit-scrollbar-thumb:hover {
-        background-color: #555; 
-    }
-    .github-table {
-        width: 150%;
-        margin-left: 8%;
-    }
-
-    .card-group {
-        margin-top: 20vh;
-        font-size: 2.8em;
-        
-    }
-    .card-group-title {
-        font-size: 5rem;
-    }
-  
-    .card {
-        width: 100%;
-    }
-    .card-title {
-        font-size: 4rem;
-        margin-top: 2rem;
-    }
-    .card-img-top {
-        width: 550px;
-        height: 300px;
-    }
-   
-    .card-tag {
-        font-size: 1.3em;
-        
-    }
-    .card-link {
-        font-size: 5em;
-    }
-    .card-button {
-        font-size: 1.5em;
-        margin: 1.5em;
-    }
-    .contact-title {
-        font-size: 6em;
-      }
-      .contact-form {
-        font-size: 5em; 
-      }
-
-      .social-icons a {
-        font-size: 50px;
-      }
-      [type="submit"] {
-        font-size: 4em;
-      }
-
-
 }
+
   
