--- a/src/css/style.css
+++ b/src/css/style.css
@@ -387,76 +387,113 @@ nav .menu-btn i{
     font-size: 30px;
   }
   
-  footer {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999; 
-}
-.footer-content {
-    padding: 5px;
-    text-align: center;
-    font-size: 14px;
-}
-.modal {
-    visibility: hidden;
-    opacity: 0;
-    position: fixed;
-    z-index: 5;
-    top: 10%;
-    left: 25%;
-    width: 50%;
-    height: 60%;
-    transition: .4s;
-  }
-  
-  .modalWrapper {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 16px;
-    width: 50%;
-    max-width: 700px;
-    padding: 20px 40px;
-  }
-  .modalBg {
-    width: 100%;
-    height: auto;
-    border-radius: 50px;
-    background-color: hsla(184, 100%, 40%, 0.9);
-  }
-  .clModal {
-    position: absolute;
-    top: 2rem;
-    right: -50px;
-    font-size: 4rem;
-    cursor: pointer;
-  }
-  #opModal {
-    position: relative;
-  }
-  .is-show {
-    visibility: visible;
-    opacity: 1;
-  }
-  .credit-title {
-    padding: 20px;
-  }
-  .credit {
-    font: Poppins;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .credit-list {
-    padding: 10px;
-    justify-content: justify;
-  }
+    .footer{
+        color: white;
+        height: auto;
+        width: 100%;
+        font-size: 2em;
+        margin-left: 4vw;
+    }
+    .footer a{
+        text-decoration: none;
+        color: white;
+    }
+    .footer p{
+        margin-bottom: 0.5em;
+    }
+    .footer-div{
+        display: flex;
+        flex-wrap: wrap;
+        width:100%;
+        margin: 0 0 0 5vw;
+        align-items: stretch;
+        padding: 60px 10px 40px 10px;
+    }
+    .footer-div-1, .footer-div-2, .footer-div-3, .footer-div-4{
+        display: flex;
+        width: calc(100% / 4 - 20px);
+        padding: 10px;
+    }
+    .footer span{
+        font-size: 20px;
+        color: white;
+    }
+    .footer-logo{
+        width: 180px;
+        height: 51px;
+    }
+    .footer-right{
+        width: 100%;
+        padding: 10px;
+        text-align: center;
+    }
+    .modal {
+        background: rgba( 31, 36, 45, 0.8 );
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+        backdrop-filter: blur( 5.5px );
+        -webkit-backdrop-filter: blur( 5.5px );
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
+        visibility: hidden;
+        opacity: 0;
+        position: fixed;
+        z-index: 5;
+        top: 15%;
+        left: 25%;
+        width: 50%;
+        height: 70%;
+        transition: .4s;
+    }
+    .modalWrapper {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 25px;
+        width: 50%;
+        max-width: 700px;
+        padding: 20px 40px;
+    }
+    .clModal {
+        position: absolute;
+        top: 2rem;
+        right: -50px;
+        font-size: 4rem;
+        cursor: pointer;
+    }
+    #opModal {
+        position: relative;
+    }
+    .is-show {
+        visibility: visible;
+        opacity: 1;
+    }
+    .credit-title {
+        padding: 20px;
+    }
+    .credit {
+        display: flex;
+        
+        flex-wrap: wrap;
+        padding: 10px;
+        font: Poppins;
+    
+    }
+    .credit a{
+    text-decoration: underline;
+    }
+    .credit-list {
+        padding: 10px;
+        justify-content: justify;
+    } 
+
+
+
+
+
+
+
+
 /*TODO: Ajustar responsividade*/
 @media (max-width:315px) {
     #btn-bio{
@@ -851,6 +888,15 @@ nav .menu-btn i{
         margin: 1.5em;
     }
  
+}
+@media (max-width: 768px) {
+    .footer-div-1, .footer-div-2, .footer-div-3, .footer-div-4{
+        width: calc(50% - 20px);
+        padding: 10px;
+    }
+    .footer-div{
+        padding: 60px 0px 40px 0px;
+    }
 }
 @media (max-width: 920px) {
    
