--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,7 +96,7 @@ nav .menu-btn i{
 .profile-pic {
     width: 300px;
     height: 300px;
-    margin-left: 1%;
+    margin: auto;
 }
 .background-image {
     position: absolute;
@@ -104,7 +104,6 @@ nav .menu-btn i{
     left: calc(50% - 150px);
     width: 300px;
     height: 300px;
-    margin-left: 4%;
     border-radius: 50%;
     box-shadow:
       inset 0 0 50px #fff,      /* inner white */
@@ -515,6 +514,7 @@ nav .menu-btn i{
     }
     .profile-pic {
         margin-top: auto;
+    
     }
     .intro-greeting {
         margin-top: 90vh;
